--- a/Rolebase-Auth/authapp/src/app/pages/admin/register/register.component.html
+++ b/Rolebase-Auth/authapp/src/app/pages/admin/register/register.component.html
@@ -1,1 +1,43 @@
-<p>register works!</p>
+<form [formGroup]="_regform" (ngSubmit)="proceedRegister()">
+  <mat-card>
+    <mat-card-header>
+      <h1>User Registration</h1>
+    </mat-card-header>
+    <mat-card-content>
+      <mat-form-field>
+        <mat-label>User Name</mat-label>
+        <input formControlName="userName" matInput >
+      </mat-form-field>
+      <mat-form-field>
+        <mat-label>Name</mat-label>
+        <input formControlName="name" matInput >
+      </mat-form-field>
+      <mat-form-field class="mat-50">
+        <mat-label >Password</mat-label>
+        <input formControlName="password" matInput >
+      </mat-form-field>
+      <mat-form-field class="mat-50">
+        <mat-label>Confirmd password</mat-label>
+        <input formControlName="confirmPassword" matInput >
+      </mat-form-field>
+      <mat-form-field class="mat-50">
+        <mat-label>Emaile</mat-label>
+        <input formControlName="email" matInput >
+      </mat-form-field>
+      <mat-form-field class="mat-50">
+        <mat-label>Phone</mat-label>
+        <input formControlName="phone" matInput >
+      </mat-form-field>
+    </mat-card-content>
+    <mat-card-actions>
+      <div class="div-50">
+        <button type="submit" mat-raised-button color="primary">Register</button>
+      </div>
+      <div class="div-50">
+        <button routerLink="/login" mat-raised-button color="accent">Back to Login</button>
+      </div>
+
+    </mat-card-actions>
+  </mat-card>
+
+</form>
